--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,6 @@
     <meta name="twitter:site" content="@gabrielkrieshok" />
     <meta name="twitter:title" content="{{ page.title }}" />
     <meta name="twitter:description" content="{{ page.summary }}" />
-    <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/images/itunes.png" />    
+    <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/images/logo.png" />    
     
 </head>
