--- a/css/main.scss
+++ b/css/main.scss
@@ -34,4 +34,11 @@
 @import "modules/media-queries";
 @import "modules/navigation";
 @import "modules/font-styles";
-@import "modules/plyr"
+@import "modules/plyr";
+
+// Custom
+//––––––––––––––––––––––––––––––––––––––––––––––––––
+
+.cards {
+    margin: 2em;
+}
