--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -12,8 +12,8 @@ $bp-larger-than-desktophd : "min-width: 1200px" !default;
 $light-grey: rgb(179, 179, 179) !default;
 $lighter-grey: lighten($light-grey, 10%) !default;
 $dark-grey: rgba(51,51,51,1) !default;
-$primary-color: #2D5D7B !default;
-$secondary-color: #457EAC !default;
+$primary-color: #8d8d8d !default;
+$secondary-color: #cfcfcf !default;
 $border-color: #bbb !default;
 $link-color: #686868 !default;
 $font-color: rgba(51,51,51,1) !default;
