--- a/_sass/base/_functions.scss
+++ b/_sass/base/_functions.scss
@@ -3,7 +3,7 @@
 * Copyright 2014, Dave Gamache
 * www.getskeleton.com
 * Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
+* https://www.opensource.org/licenses/mit-license.php
 * 12/9/2014
 * Sass Version by Seth Coelen https://github.com/whatsnewsaes
 */
