--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,5 +28,14 @@
     <meta name="twitter:title" content="{{ page.title }}" />
     <meta name="twitter:description" content="{{ page.summary }}" />
     <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/images/logo.png" />    
-    
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175463629-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-175463629-1');
+</script>
 </head>
