--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,10 @@ layout: default
 <article class="post" >
 
     <h1 class="u-full-width" >{{ page.title }}</h1>
-    
+    <img src="/images/logo-small.png" style="width: 200px;" />
+
     <div class="player center-content">
+
     <div class="eight columns">
     <audio controls>
         <source src="{{ page.file }}" type="audio/mp3">
