--- a/_sass/modules/_buttons.scss
+++ b/_sass/modules/_buttons.scss
@@ -6,7 +6,7 @@ button {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
-  color: white;
+  color: gray;
   text-align: center;
   font-size: 11px;
   font-weight: 600;
